grammar check and ui modularized